# sic-xe-assembler

./: .gitignore  CMakeLists.txt  Pass1
include/cs222/: Assembler.h  Directives.h  IO.h  Instruction.h  InstructionChecker.h  IntermediateParser.h  OpTable.h  Operand.h  OperandType.h  Operation.h  Parser.h  Pass2.h  Statement.h  Symbol.h  Utility.h  Validator.h  constants.h  enums.h
samples/: bad.asm  example.asm  example.asm.listing  example.asm.symtab  prog01.asm  prog02.asm  prog03.asm  prog04.asm  prog05.asm  prog05.asm.littab  prog05.asm.objprog
src/: Instruction.cpp  Operand.cpp  Operation.cpp  Parser.cpp  Statement.cpp  Symbol.cpp  main.cpp
src/cs222/: Instruction.cpp  IntermediateParser.cpp  Operand.cpp  Operation.cpp  Parser.cpp  Pass1.cpp  Pass2.cpp  Symbol.cpp  Utility.cpp  Validator.cpp  main.cpp  pass1.cpp
test/: ParserTest.cpp  ParserTestOperands.txt
